<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sprint1</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcomepage_title1">Welcome to Telephone!</string>
    <string name="welcomepage_title2">What would you like to do?</string>
    <string name="welcomepage_createbutton">Create New Game</string>
    <string name="welcomepage_joinbutton">Join Existing Game</string>
    <string name="welcomepage_exitbutton">Exit Game</string>
    <string name="setuppage_title1">Fill out the following:</string>
    <string name="setuppage_titlename">Your player name:</string>
    <string name="setuppage_fieldname">Player1</string>
    <string name="setuppage_titlelobby">Game lobby name:</string>
    <string name="setuppage_fieldlobby">Unnamed</string>
    <string name="setuppage_titleplayers">Maximum players:</string>
    <string name="setuppage_createbutton">Create Game</string>

</resources>
